--- a/src/components/FormComponent.css
+++ b/src/components/FormComponent.css
@@ -9,7 +9,7 @@ input {
     display: block;
     font-size: 16px;
     padding: 10px;
-    /* width: 100%; */
+    width: 100%;
 }
 
 input:focus {
@@ -17,10 +17,10 @@ input:focus {
 }
 
 .btn {
-    background-color: #505050;
-    color: white;
     cursor: pointer;
     display: block;
     padding: 10px;
     font-size: 16px;
+    width: 100%;
+    margin: 10px 0;
 }
