react-router-dom v6

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;400&display=swap");
 * {
     box-sizing: border-box;
-    font-family: 'Kanit', sans-serif;
+    font-family: "Kanit", sans-serif;
 }
 
 body {
@@ -17,4 +17,28 @@ body {
 .container {
     margin: 30px auto;
     width: 300px;
+}
+
+.horizontal-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: slategray;
+    text-align: center;
+}
+
+.horizontal-menu li {
+    display: inline-block;
+}
+
+.horizontal-menu li a {
+    color: white;
+    text-decoration: none;
+    padding: 16px;
+    display: block;
+}
+
+.horizontal-menu li a:hover {
+    color: blue;
 }
